01 - blog/infra/k8s/posts-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deploy

spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts

    spec:
      containers:
        - name: posts
          image: posts:latest
