01 - blog/infra/k8s/comments.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deploy

spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments

    spec:
      containers:
        - name: event-bus
          image: sirharvey/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv

spec:
  selector:
    app: comments
  # type: ClusterIP # default
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
