01 - blog/infra/k8s/posts.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv

spec:
  type: NodePort
  selector:
    app: posts
  ports:
    # expose the port  to the world :
    - name: posts
      protocol: TCP
      port: 4000 # exposes at
      targetPort: 4000 # listening to
